--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,24 +21,22 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
-
     // views
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
-
     // dependency injection
     compile 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     compile 'com.google.dagger:dagger:2.10'
     annotationProcessor "com.google.dagger:dagger-compiler:2.10"
-
     // json serialization
     compile 'com.google.code.gson:gson:2.8.0'
-
     // time picker
-    compile 'com.wdullaer:materialdatetimepicker:3.1.3'
+    compile 'com.wdullaer:materialdatetimepicker:3.2.2'
+    // tag view
+    compile 'com.veinhorn.tagview:library:1.0.4'
 }
