added template services

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".view.activities.EventPostActivity" />
+
+        <service android:name=".model.services.SetSilentService" />
+        <service android:name=".model.services.SetNormalService" />
     </application>
 
 </manifest>
