fixed inexact alarm on api level 19 above

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         </activity>
         <activity android:name=".view.activities.EventPostActivity" />
 
-        <service android:name=".model.services.SetSilentService" />
+        <service android:name=".model.services.SetRingerService" />
         <service android:name=".model.services.SetNormalService" />
     </application>
 
