--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     annotationProcessor "com.google.dagger:dagger-compiler:2.10"
     // json serialization
     compile 'com.google.code.gson:gson:2.8.0'
-    // time picker
+    // time.png.png.png.png.png picker
     compile 'com.wdullaer:materialdatetimepicker:3.2.2'
     // tag view
     compile 'com.veinhorn.tagview:library:1.0.4'
