on reboot, alarms persist

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:xlargeScreens="false"/>
 
     <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
         android:name=".PhoneSilencerApplication"
@@ -27,6 +28,18 @@
             </intent-filter>
         </activity>
         <activity android:name=".view.activities.EventPostActivity" android:theme = "@style/AppTheme"/>
+
+        <receiver
+            android:name="com.justplaingoatappsgmail.phonesilencer.model.receivers.BootBroadcastReceiver"
+            android:enabled="true"
+            android:exported="false"
+            android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.QUICKBOOT_POWERON"/>
+                <action android:name="com.htc.intent.action.QUICKBOOT_POWERON"/>
+            </intent-filter>
+        </receiver>
 
         <service android:name=".model.services.SetRingerService" />
         <service android:name=".model.services.SetNormalService" />
