--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "25.0.2"
 
     defaultConfig {
-        applicationId "com.justplaingoatappsgmail.phonesilencer"
+        applicationId "com.justplaingoatappsgmail.phonesilencerpremium"
         minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
