--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.justplaingoatappsgmail.phonesilencer">
+    package="com.justplaingoatappsgmail.phonesilencerpremium">
 
     <supports-screens android:smallScreens="true"
         android:normalScreens="true"
@@ -11,14 +11,14 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
-        android:name=".PhoneSilencerApplication"
+        android:name="com.justplaingoatappsgmail.phonesilencerpremium.PhoneSilencerApplication"
         android:allowBackup="true"
         android:icon="@drawable/hand"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".view.activities.EventListActivity"
+            android:name="com.justplaingoatappsgmail.phonesilencerpremium.view.activities.EventListActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -27,10 +27,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.activities.EventPostActivity" android:theme = "@style/AppTheme"/>
+        <activity android:name="com.justplaingoatappsgmail.phonesilencerpremium.view.activities.EventPostActivity" android:theme = "@style/AppTheme"/>
 
         <receiver
-            android:name="com.justplaingoatappsgmail.phonesilencer.model.receivers.BootBroadcastReceiver"
+            android:name="com.justplaingoatappsgmail.phonesilencerpremium.model.receivers.BootBroadcastReceiver"
             android:enabled="true"
             android:exported="false"
             android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
@@ -41,8 +41,8 @@
             </intent-filter>
         </receiver>
 
-        <service android:name=".model.services.SetRingerService" />
-        <service android:name=".model.services.SetNormalService" />
+        <service android:name="com.justplaingoatappsgmail.phonesilencerpremium.model.services.SetRingerService" />
+        <service android:name="com.justplaingoatappsgmail.phonesilencerpremium.model.services.SetNormalService" />
     </application>
 
 </manifest>
